GNOME Bugzilla – Bug 688253
power: fix a warning at startup
Last modified: 2012-11-13 14:41:29 UTC
This doesn't seem to be needed in git master, since the session proxy is created differently.
Created attachment 228892 [details] [review] power: fix a warning at startup idle_configure() will call idle_is_session_inhibited(), which will warn if the session proxy is not available. This will always be the case when idle_configure() is called at startup, since we create it asynchronously, so we'll always warn. Remove the warning my moving the idle_configure() call to the session proxy ready callback.
Review of attachment 228892 [details] [review]: s/my/by/ Looks good otherwise.
Attachment 228892 [details] pushed as 179a11e - power: fix a warning at startup Thanks, pushed.